2017-08-29  Julien Bect  <julien.bect@centralesupelec.fr>

	generate_htmldoc.m: Use HTML version of NEWS.md (ticket #61)

	* admin/build_tools/generate_htmldoc.m: Insert HTML version of
	NEWS.md, produced by markdown, inside NEWS.html.

	NEWS.md: Fix markdown formatting

	* NEWS.md: Fix markdown formatting

2017-08-28  Julien Bect  <julien.bect@centralesupelec.fr>

	Convert NEWS to markdown formatting

	* NEWS.md: Convert NEWS to markdown formatting and rename to NEWS.md.
	* NEWS: Removed.
	* admin/build_tools/build_octpkg.m: Rename NEWS to NEWS.md.

2017-08-26  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/ismember.m: Do not assume 'rows' (ticket #50)

	* arrays/@stk_dataframe/ismember.m: Do not assume 'rows', in order
	to have a behaviour that is consistent with that of the base
	function on numerical matrices.

	Remove isoctave function

	* misc/mole/isoctave/isoctave.m: Deleted.
	* stk_init.m: Use exist directly. Remove a few lines related to
	the isoctave function.
	* misc/mole/graphics_toolkit/graphics_toolkit.m: Use exist
	directly.
	* misc/optim/@stk_optim_octavesqp/stk_optim_octavesqp.m: Use exist
	directly.
	* misc/options/stk_options_set.m: Use exist directly.
	* misc/parallel/stk_parallel_start.m: Use exist directly.
	* misc/test/stk_test.m: Use exist directly.
	* admin/octpkg/patches/remove-buildmex.patch: Refresh patch.
	* admin/octpkg/patches/remove-testprivatemex.patch: Refresh patch.
	* admin/octpkg/patches/stk-init-rmpath-cleanup.patch: Refresh patch.
	* admin/octpkg/patches/use-native-test-function.patch: Refresh patch.

	CG#10: Disable TeX interpreter for variable names

	* admin/CODING_GUIDELINES: Introduce new coding guideline, CG#10,
	recommending to disable the TeX interpreter for variable names.
	* arrays/@stk_dataframe/plot.m: Follow CG#10.
	* arrays/@stk_dataframe/plotmatrix.m: Follow CG#10.
	* arrays/@stk_factorialdesign/private/plot_surfmeshcontour.m: Follow CG#10.
	* arrays/@stk_hrect/axis.m: Follow CG#10.
